--- a/views/pages/land_page.ejs
+++ b/views/pages/land_page.ejs
@@ -47,5 +47,10 @@
 	<footer>
   <%- include('../partials/footer'); %>
 </footer>
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  const socket = io();
+</script>
 </body>
 </html> 
