--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -1,29 +1,44 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-	<div class="container-fluid">
-		<a href="#" class="navbar-brand">Livchat</a>
-        	<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarCollapse">
-           	<div class="navbar-nav">
-                	<a href="#" class="nav-item nav-link active bi-house-door"> Home</a>
-		</div>
-		<div class="navbar-nav ms-auto">
+    <div class="container-fluid">
+      <a href="#" class="navbar-brand">Livchat</a>
+      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+           <div class="navbar-nav">
+             
+                <a href="#" id="profilePg" class="nav-item nav-link active"><i class="fas fa-house-chimney-window"></i> Home</a>
+            </div>
+            <div class="navbar-nav ms-auto">
               
-              	<form class="d-flex">
-			<div class="input-group">
-				<input type="text" class="form-control d-none" placeholder="Search">
-				<button type="button" class="btn btn-dark">
-					<a><i class="bi-search"></i></a>
-				</button>
-			</div>
+              <form class="d-flex">
+                <div class="input-group">
+                  <input id="searchBar" type="text" class="form-control d-non" placeholder="Search">
+                  <button type="button" class="btn btn-dark">
+                    <a><i class="fas fa-magnifying-glass"></i></a>
+                  </button>
+                </div>
               </form>
-	      
-	      <a href="#" class="nav-item nav-link bi-chat"></a> 
-              <a href="#" class="nav-item nav-link bi-person"></a>
-	      <a href="#" class="nav-item nav-link bi-post"><button type="btn" class="btn-success">Create Post</button></a>
-              <a href="#" class="nav-item nav-link"><button type="btn" class="btn-secondary">Log out</button></a>
-		</div>
-		</div>
-	</div>
+  
+              <ul class="navbar-nav d-flex flex-row me-2">
+ 
+                <li class="nav-item me-3 me-lg-0">
+                <a class="nav-link text-white me-1" id="chat" href="#"><i class="far fa-comments"></i></a>
+            </li>
+                <li class="nav-item me-3 me-lg-0">
+                <a class="nav-link text-white" id="profile" href="#"><i class="fas fa-user mx-1"></i></a>
+            </li>         
+        </ul>
+              <div class="d-flex align-items-center">
+        <button type="button" id="createPost" class="btn btn-success me-3">
+          Create post
+        </button>
+        <button type="button" id="logout" class="btn btn-secondary me-3">
+          Log out
+        </button>
+        
+      </div>
+               
+            </div>
+        </div>
+    </div>
 </nav>
