--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,3 +1,10 @@
+<!DOCTYPE html>                                                       <html lang="en">                                                              <head>
+		<%- include('../partials/head'); %>
+	</head>
+	<body>
+		<header>
+			<%- include('../partials/header'); %>
+		</header>
 <main>
 <div class="container-fluid">
     <div class="p-5 my-4 bg-light rounded-3">
@@ -5,11 +12,20 @@
      
     
     <nav class="head nav nav-piles container-fluid bg-white">
-              <div type="button" href="#" class=" nav-item nav-link"> Posts: #</div> 
-              <div href="#" type="button" class="nav-item nav-link">Followers: #</div>
-              <div href="#" type="button" class="nav-item nav-link">Following: #</div>
+              <div type="button" href="#" class=" nav-item nav-link"> Posts: <%= posts %></div> 
+	      <div href="#" type="button" class="nav-item nav-link">Followers: <%= followers %></div>
+	      <div href="#" type="button" class="nav-item nav-link">Following: <%= following %></div>
 </nav>
   </div>
     
    <hr>
   </main>
+  <footer>
+	  <%- include('../partials/footer'); %>
+  </footer>
+  <script src="/socket.io/socket.io.js"></script>
+<script>
+	const socket = io();
+</script>
+	</body>
+</html>
