--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,17 @@
-<div class="row">
-	<div class="col-md-12 text-center">
-		<p>Copyright &copy; 2023 Livchat</p>
+<hr>
+</main>
+<footer>
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<p>Copyright &copy; 2023 Livchat</p>
+		</div>
 	</div>
+</footer>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  const socket = io();
+</script>
+</body>
+</html>
