--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,29 +1,10 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-	<div class="container-fluid">
-		<a href="#" class="navbar-brand">Livchat</a>
-        	<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarCollapse">
-           	<div class="navbar-nav">
-                	<a href="#" class="nav-item nav-link active bi-house-door"> Home</a>
-		</div>
-		<div class="navbar-nav ms-auto">
-              
-              	<form class="d-flex">
-			<div class="input-group">
-				<input type="text" class="form-control d-none" placeholder="Search">
-				<button type="button" class="btn btn-dark">
-					<a><i class="bi-search"></i></a>
-				</button>
-			</div>
-              </form>
-	      
-	      <a href="#" class="nav-item nav-link bi-chat"></a> 
-              <a href="#" class="nav-item nav-link bi-person"></a>
-	      <a href="#" class="nav-item nav-link bi-post"><button type="btn" class="btn-success">Create Post</button></a>
-              <a href="#" class="nav-item nav-link"><button type="btn" class="btn-secondary">Log out</button></a>
-		</div>
-		</div>
-	</div>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>LivChat</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+</head>
+<body>
