--- a/views/pages/create_post.ejs
+++ b/views/pages/create_post.ejs
@@ -1,6 +1,6 @@
-<%- include("partials/header"); -%>
+<%- include("../partials/header.ejs"); %>
 
-<%- include("partials/head"); -%>
+<%- include("../partials/nav.ejs"); %>
 
 <div class="container">
 	<div class="p-5 my-4 bg-light rounded-3">
@@ -19,4 +19,4 @@
 </div>
 
 
-<%- include("partials/footer"); -%>
+<%- include("../partials/footer.ejs"); %>
