--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header"); -%>
+<%- include("../partials/header.ejs"); %>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 	<div class="container-fluid">
@@ -59,4 +59,4 @@
 	</div>
 
 
-<%- include("partials/footer"); -%>
+<%- include("../partials/footer.ejs"); %>
