--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,6 +8,7 @@
 	</div>
 </footer>
 </div>
+<script src="../../frontend/live-search.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script>
