--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,9 +12,9 @@
 				<a href="#" class="nav-item nav-link"><i class="fas fa-envelope mx-1"></i> Contact</a>
 			</div>
 			<div class="navbar-nav ms-auto">
-				<form class="d-flex" action="submit" method="post" id="login-form">
-					<input class="form-control me-2" type="text" placeholder="Username">
-					<input class="form-control me-2" type="password" placeholder="Password">
+				<form class="d-flex" action="/signin" method="post" id="signin-form">
+					<input class="form-control me-2" type="text" placeholder="Username" id="inputUsername">
+					<input class="form-control me-2" type="password" placeholder="Password" id=inputPassword>
 					<button class="btn btn-primary" type="submit">Login</button>
 				</form>
 			</div>
@@ -32,12 +32,12 @@
 				<p> Get connected today!</p>
 			</div>
 			<div class="col-md-5 my-4">
-				<form class="py-3" action="submit" method="post">
-					<div class="mb-3">
+				<form class="py-3" id="signup-form" action="/signup" method="post">
+					<div class="mb-3 form-group">
 						<label class="form-label" for="inputUsername">Username</label>
 						<input type="username" class="form-control" id="inputUsername" placeholder="adam1000">
 					</div>
-					<div class="mb-3">
+					<div class="mb-3 form-group">
 						<label class="form-label" for="inputEmail">Email</label>
 						<input type="email" class="form-control" id="inputEmail" placeholder="you@example.com">
 					</div>
@@ -46,7 +46,7 @@
 						<label class="form-label" for="inputPassword">Password</label>
 						<input type="password" class="form-control" id="inputPassword" placeholder="password">
 					</div>
-					<div class="mb-3">
+					<div class="form-group mb-3">
 						<div class="form-check">
 							<input class="form-check-input" type="checkbox" id="checkRemember">
 							<label class="form-check-label" for="checkRemember">Remember me</label>
