--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,62 +1,63 @@
 <%- include("../partials/header.ejs"); %>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-	<div class="container-fluid">
-		<a href="#" class="navbar-brand">LivChat</a>
-		<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-expanded="true">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">LivChat</a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-expanded="true">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarCollapse">
-			<div class="navbar-nav">
-				<a href="#" class="nav-item nav-link active"><i class="fas fa-house-chimney-window"></i> Home</a>
-				<a href="#" class="nav-item nav-link"><i class="fas fa-envelope mx-1"></i> Contact</a>
-			</div>
-			<div class="navbar-nav ms-auto">
-				<form class="d-flex" action="/signin" method="post" id="signin-form">
-					<input class="form-control me-2" type="text" placeholder="Username" name='username' id="inputUsername">
-					<input class="form-control me-2" type="password" placeholder="Password" name='password' id=inputPassword>
-					<button class="btn btn-primary" type="submit">Login</button>
-				</form>
-			</div>
-		</div>
-	</div>
-</nav>
-<main>
-<div class="container-fluid">
-	<div class="p-5 my-4">
-		<div class="row border rounded-3">
-			<div class="col-md-7 p-5 my- bg-light rounded-3">
-				<h1>Staying Connected</h1>
-				<p class="lead">In today"s world the internet is a fast, sure and essential way of connecting with the people. With Livchat you can connect with family, friends or develop new relationships. You can share your thoughts at any time, view posts shared by others and give your thoughts on it and many more...
-				</p>
-				<p> Get connected today!</p>
-			</div>
-			<div class="col-md-5 my-4">
-				<form class="py-3" id="signup-form" action="/signup" method="POST">
-					<div class="mb-3 form-group">
-						<label class="form-label" for="inputUsername">Username</label>
-						<input type="username" name="username" class="form-control" id="inputUsername" placeholder="adam1000">
-					</div>
-					<div class="mb-3 form-group">
-						<label class="form-label" for="inputEmail">Email</label>
-						<input type="email" name='email' class="form-control" id="inputEmail" placeholder="you@example.com">
-					</div>
-					<div class="mb-3">
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav">
+                    <a href="#" class="nav-item nav-link active"><i class="fas fa-house-chimney-window"></i> Home</a>
+                    <a href="#" class="nav-item nav-link"><i class="fas fa-envelope mx-1"></i> Contact</a>
+                </div>
+                <div class="navbar-nav ms-auto">
+                    <form class="d-flex" action="/signin" method="post" id="signin-form">
+                        <input class="form-control me-2" type="text" placeholder="Username" name='username' id="inputUsername">
+                        <input class="form-control me-2" type="password" placeholder="Password" name='password' id=inputPassword>
+                        <button class="btn btn-primary" type="submit">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <main>
+        <div class="container-fluid">
+            <div class="p-5 my-4">
+                <div class="row border rounded-3">
+                    <div class="col-md-7 p-5 my- bg-light rounded-3">
+                        <h1>Staying Connected</h1>
+                        <p class="lead">In today"s world the internet is a fast, sure and essential way of connecting with the people. With Livchat you can connect with family, friends or develop new relationships. You can share your thoughts at any time, view posts
+                            shared by others and give your thoughts on it and many more...
+                        </p>
+                        <p> Get connected today!</p>
+                    </div>
+                    <div class="col-md-5 my-4">
+                        <form class="py-3" id="signup-form" action="/signup" method="POST">
+                            <div class="mb-3 form-group">
+                                <label class="form-label" for="newUsername">Username</label>
+                                <input type="username" name="username" class="form-control" id="newUsername" placeholder="adam1000">
+                            </div>
+                            <div class="mb-3 form-group">
+                                <label class="form-label" for="newEmail">Email</label>
+                                <input type="email" name='email' class="form-control" id="newEmail" placeholder="you@example.com">
+                            </div>
+                            <div class="mb-3">
 
-						<label class="form-label" for="inputPassword">Password</label>
-						<input type="password" class="form-control" name='password' id="inputPassword" placeholder="password">
-					</div>
-					<div class="form-group mb-3">
-						<div class="form-check">
-							<input class="form-check-input" type="checkbox" id="checkRemember">
-							<label class="form-check-label" for="checkRemember">Remember me</label>
-						</div>
-					</div>
-					<button type="submit" class="btn btn-success">Sign Up</button>
-				</form>
-			</div>
-		</div>
-	</div>
+                                <label class="form-label" for="newPassword">Password</label>
+                                <input type="password" class="form-control" name='password' id="newPassword" placeholder="password">
+                            </div>
+                            <div class="form-group mb-3">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="checkRemember">
+                                    <label class="form-check-label" for="checkRemember">Remember me</label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-success">Sign Up</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
 
-<%- include("../partials/footer.ejs"); %>
+            <%- include("../partials/footer.ejs"); %>
