--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,21 +1,17 @@
 <%- include("../partials/header.ejs"); %>
 
-<%- include("../partials/nav.ejs"); %>
+    <%- include("../partials/nav.ejs"); %>
 
-<div class="container-fluid">
-	<div class="p-5 my-4 bg-light rounded-3">
-		<div class="d-flex align-items-center">
-			<a class="d-flex align-items-center me-3" href="#" id="userImg">
-				<img
-            			src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-            			class="rounded-circle"
-            			height="22"
-            			alt="Portrait of a Woman"
-            			loading="lazy"
-          			/>
-        		</a>
-			<h4 class="me-3">Icon <%= user.username %></h4>
-			<!--< if(user && user._id != currentUser._id) { %>
+        <div class="container-fluid">
+            <div class="p-5 my-4 bg-light rounded-3">
+                <div class="d-flex align-items-center">
+                    <a class="d-flex align-items-center me-3" href="#" id="userImg">
+                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp" class="rounded-circle" height="22" alt="Portrait of a Woman" loading="lazy" />
+                    </a>
+                    <h4 class="me-3">Icon
+                        <%= user.username %>
+                    </h4>
+                    <!--< if(user && user._id != currentUser._id) { %>
                        < const following = user.following;
                           const action = following.includes(currentUser._id) ? 'unfollow' : 'follow';
                        %>
@@ -24,84 +20,83 @@
 			<button type="button" class="active btn btn-success text-white" id="follow">Follow <i id="fol-icon" class="fas fa-user-check"></i><i id="unfol-icon" class="fas fa-user-large-slash d-none"></i>
 			</button>
 		-->
-		</div>
-		<nav>
-		<!-- Nav tabs -->
+                </div>
+                <nav>
+                    <!-- Nav tabs -->
 
-		<ul class="nav nav-tabs" id="myTab" role="tablist">
-			<li class="nav-item" role="presentation">
-				<button class="nav-link active" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts" type="button" role="tab"> Posts: <%= posts.length %></button>
-			</li>
-			
-			<li class="nav-item" role="presentation">
-				<button class="nav-link" id="followers-tab" data-bs-toggle="tab" data-bs-target="#followers" type="button" role="tab">Followers: <%= followers.length %></button>
-			</li>
+                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts" type="button" role="tab"> Posts: <%= posts.length %></button>
+                        </li>
 
-			<li class="nav-item" role="presentation">
-				<button class="nav-link" id="following-tab" data-bs-toggle="tab" data-bs-target="#following" type="button" role="tab">Following: <%= following.length %></button>
-			</li>
-		</ul>
-		</nav>
-		
-		<!-- Tab panes -->
-		<div class="tab-content">
-		<div class="tab-pane active border px-3 pt-3" id="posts" role="tabpanel">
-			<% if (posts.length === 0) { %>
-			  <p> You have no posts, click posts button to share your thoughts </p>
-			<% } %>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="followers-tab" data-bs-toggle="tab" data-bs-target="#followers" type="button" role="tab">Followers: <%= followers.length %></button>
+                        </li>
 
-			<% if(posts.length > 0) {
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="following-tab" data-bs-toggle="tab" data-bs-target="#following" type="button" role="tab">Following: <%= following.length %></button>
+                        </li>
+                    </ul>
+                </nav>
+
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div class="tab-pane active border px-3 pt-3" id="posts" role="tabpanel">
+                        <% if (posts.length === 0) { %>
+                            <p> You have no posts, click posts button to share your thoughts </p>
+                            <% } %>
+
+                                <% if(posts.length > 0) {
 			  posts.forEach(post => {
 			%>
-			  <p class="border">
-			    <a href='/posts/:<%= post._id %>'><%= post.title %></a> created at <%= post.createdAt%>
-			  </p>
-			<% });
+                                    <p class="border">
+                                        <a href='/post/<%= post._id %>'>
+                                            <%= post.title %>
+                                        </a> created at
+                                        <%= post.createdAt%>
+                                    </p>
+                                    <% });
 			} %>
-		</div>
+                    </div>
 
-		<div class="tab-pane border px-3 pt-3" id="followers" role="tabpanel">
-			<% if(followers.length === 0) { %>
-			  <p>You are not being follows yet </p>
-			<% } %>
+                    <div class="tab-pane border px-3 pt-3" id="followers" role="tabpanel">
+                        <% if(followers.length === 0) { %>
+                            <p>You are not being followed yet </p>
+                            <% } %>
 
-			<% if(followers.length > 0) {
+                                <% if(followers.length > 0) {
 			  followers.forEach(follow => { %>
-			  <p class="border"> <img
-					src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-					class="rounded-circle m-3"
-					height="18"
-					id="fol-id"
-					alt="Portrait of a Woman"
-					loading="lazy"/>img
-			<a href="profile/:<%= follow._id %>"><%= follow.username %></a><%= follow.about %></p>
-			<% });
+                                    <p class="border"> <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp" class="rounded-circle m-3" height="18" id="fol-id" alt="Portrait of a Woman" loading="lazy" />img
+                                        <a href='/profile/<%= follow.username %>'>
+                                            <%= follow.username %>
+                                        </a>
+                                        <%= follow.about %>
+                                    </p>
+                                    <% });
 			} %>
-		</div>
+                    </div>
 
-		<div class="tab-pane border px-3 pt-3" id="following" role="tabpanel">
-			<% if(following.length === 0) { %>
-			   <p>You are not following any users </p>
-			<% } %>
+                    <div class="tab-pane border px-3 pt-3" id="following" role="tabpanel">
+                        <% if(following.length === 0) { %>
+                            <p>You are not following any users </p>
+                            <% } %>
 
-			<% if(following.length > 0) {
+                                <% if(following.length > 0) {
 			  following.forEach(follow => {
 			%>
-			  <p class="border"> <img
-					src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-					class="rounded-circle m-3"
-					height="18"
-					id="fols-id"
-					alt="Portrait of a Woman"
-					loading="lazy"/>img
-			<a href="folprofile/:<%= follow.username %></a> <%= follow.about %></p>
-			<% });
+                                    <p class="border"> <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp" class="rounded-circle m-3" height="18" id="fols-id" alt="Portrait of a Woman" loading="lazy" />img
+                                        <a href='/folprofile/<%= follow.username %>'>
+                                            <%= follow.username %>
+                                        </a>
+                                        <%= follow.about %>
+                                    </p>
+                                    <% });
 			} %>
-		</div>
-		</div>
-    
-      
-      <!-- End of container -->
-	</div>
-    
-<%- include("../partials/footer.ejs"); %>
+                    </div>
+                </div>
+
+
+                <!-- End of container -->
+            </div>
+
+            <%- include("../partials/footer.ejs"); %>
