--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -108,7 +108,7 @@
                                             <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp" class="rounded-circle m-3" height="18" id="fols-id" alt="Portrait of a Woman" loading="lazy" />
                                         </div>
                                         <div class="flex-grow-1 ms-3">
-                                            <a href='/folprofile/<%= follow.username %>'>
+                                            <a href='/profile/<%= follow.username %>'>
                                                 <%= follow.username.toUpperCase() %>
                                             </a>
                                             <p>
