--- a/views/pages/single_post.ejs
+++ b/views/pages/single_post.ejs
@@ -23,10 +23,10 @@
                                     </h4>
                                     <ul class="ms-auto navbar-nav d-flex flex-row">
                                         <li class="nav-item me-3 me-lg-0">
-                                            <a href="#"><i class="fas fa-edit me-2" style="color:blue" id="postEdit"></i></a>
+                                            <a href="/post/edit/<%= post._id%>"><i class="fas fa-edit me-2" style="color:blue" id="postEdit"></i></a>
                                         </li>
                                         <li class="nav-item me-3 me-lg-0">
-                                            <a href="/posts/delete/<%= post._id%>"><i class="fas fa-trash-can" style="color:red" id="postDelete"></i></a>
+                                            <a href="/post/delete/<%= post._id%>"><i class="fas fa-trash-can" style="color:red" id="postDelete"></i></a>
                                         </li>
                                     </ul>
                                 </div>
