Users avatar feature added using gravatar

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -12,31 +12,47 @@
                     </div>
                     <% } %>
                         <% if (user.following !== 0) { %>
+                            <div class="d-flex align-items-center mb-2">
+                                <a class="d-flex align-items-center me-3" href="#" id="userImg">
+                                    <% if(user.image) { %>
+                                        <img src="<%=user.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
+                                        <% }%>
+                                </a>
+                                <h4 class="me-3">Icon
+                                    <%= user.username.toUpperCase() %>
+                                </h4>
+                            </div>
                             <div class="py-3" id="follows-posts">
                                 <% if (posts === undefined) {%>
                                     <div class="text-center">
                                         <p>Your friends have not posted recently</p>
                                     </div>
                                     <% } else{ %>
-                                        <% posts.forEach(post => {%>
-                                            <div class="d-flex border rounded-3 p-2 mb-2">
-                                                <div class="flex-shrink-0">
-                                                    <img class="rounded-circle" src="https://th.bing.com/th?q=Lion+Face+SVG&w=120&h=120&c=1&rs=1&qlt=90&cb=1&pid=InlineBlock&mkt=en-WW&cc=NG&setlang=en&adlt=moderate&t=1&mw=247" alt="sample image">
-                                                </div>
-                                                <div class="flex-grow-1 ms-3">
-                                                    <h5>
-                                                        <%= post.user %><small class="text-muted"><i> Posted on <%= post.createdAt.toDateString() %></i></small></h5>
-                                                    <h6>
-                                                        <%= post.title %>
-                                                    </h6>
-                                                    <p>
-                                                        <%= post.content %>
-                                                    </p>
-                                                    <a href='/post/<%= post._id %>' class="btn btn-sm btn-primary">View Post</a>
+                                        <h3><small class="text-muted text-center"><i>This is your feed</i></small></h5>
+                                            <% posts.forEach(post => {%>
+                                                <div class="d-flex border rounded-3 p-2 mb-2">
+                                                    <div class="flex-shrink-0">
+                                                        <% if(user.image) { %>
+                                                            <img src="<%=user.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
+                                                            <% }%>
+                                                    </div>
+                                                    <div class="flex-grow-1 ms-3">
 
+                                                        <h6>
+                                                            <%= post.user %>
+                                                        </h6>
+                                                        <p><small class="text-muted"><i> Posted on <%= post.createdAt.toDateString() %></i></small></p>
+                                                        <h6>
+                                                            <%= post.title %>
+                                                        </h6>
+                                                        <p>
+                                                            <%= post.content %>
+                                                        </p>
+                                                        <a href='/post/<%= post._id %>' class="btn btn-sm btn-primary">View Post</a>
+
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            <% });
+                                                <% });
 		} %>
                             </div>
                             <% } %>
