--- a/views/pages/single_post.ejs
+++ b/views/pages/single_post.ejs
@@ -5,7 +5,7 @@
 
         <div class="container">
             <div class="p-5 my-4 bg-light rounded-3">
-                <a href="/profile/:<%=post.user%>"><i class="fas fa-arrow-circle-left" style="color:grey"></i></a>
+                <a href="/profile>"><i class="fas fa-arrow-circle-left" style="color:grey"></i></a>
                 <div class="row">
                     <!-- <div class="pt-3 text-center muted" style="background:#C8E6C9">
 				<p>%New post successfully created%</p>
