--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -26,10 +26,10 @@
 
                         <ul class="navbar-nav d-flex flex-row me-2">
                             <li class="nav-item me-3 me-lg-0">
-                                <a class="nav-link text-white me-1" id="chat" href="/chat/user.username"><i class="far fa-comments"></i></a>
+                                <a class="nav-link text-white me-1" id="chat" href="/chat"><i class="far fa-comments"></i></a>
                             </li>
                             <li class="nav-item me-3 me-lg-0">
-                                <a class="nav-link text-white" id="profile" href="/profile/user.user._id"><i class="fas fa-user mx-1"></i></a>
+                                <a class="nav-link text-white" id="profile" href="/profile"><i class="fas fa-user mx-1"></i></a>
                             </li>
                         </ul>
                         <div class="d-flex align-items-center">
