--- a/views/pages/single_post.ejs
+++ b/views/pages/single_post.ejs
@@ -8,7 +8,7 @@
                 <%- include("../partials/flash.ejs"); -%>
                     <a href="/profile"><i class="fas fa-arrow-circle-left" style="color:grey"></i></a>
                     <div class="row">
-                        <div id="postCard" pclass="card mb-3 card-body">
+                        <div id="postCard" class="card mb-3 card-body">
                             <div class="row align-items-center">
                                 <div class="col-auto">
                                     <img src="#" class="width-90 rounded-3" alt="">
