Application bundling and chat feature loading

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,14 @@
 #postCard {
-  border: solid 2px teal;
-  }
+    border: solid 2px teal;
+}
+
+.title a {
+    text-decoration: none;
+}
+
+
+/*  */
+
+#results-container div:hover {
+    opacity: 80%;
+}
