--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,16 +12,47 @@
                     </a>
                 </div>
                 <div class="navbar-nav ms-auto">
+
                     <!-- Search panel -->
-                    <div class="dropdown">
+                    <!-- <div class="dropdown">
                         <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"><i class="fas fa-magnifying-glass"></i></button>
                         <div id="search-container" class="dropdown-menu">
                             <input class="dropdown-item" type="search" id="search-bar" placeholder="Search posts..." />
                             <div class="dropdown-item" id="results-container">
                             </div>
-                            <p class="dropdown-item d-none" id="unavailMsg"></p>
+                            <div class="dropdown-item d-none" id="unavailTxt"></div>
+                        </div>
+                    </div> -->
+                    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#liveSearch">
+                        <i class="fas fa-magnifying-glass"></i>
+                    </button>
+                    <div class="modal fade" id="liveSearch" tabindex="-1" aria-labelledby="liveSearch" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <div id="search-container" class="modal-body d-flex">
+                                    <div class="flex-grow-1">
+                                        <input class="rounded w-100 p-2" type="search" id="search-bar" placeholder="Search posts..." />
+                                        <div class="mt-3" id="results-container">
+                                            <div class="p-2 border-bottom bg-light">
+                                                <a href="#" class="d-block">Post title2</a>
+                                                <!-- <small><a href="#" class="d-block">Username2</a></small> -->
+                                            </div>
+                                            <div class="p-2 border-bottom bg-light">
+                                                <a href="#" class="d-block">Post title3</a>
+                                                <!-- <small><a href="#" class="d-block">Username2</a></small> -->
+                                            </div>
+                                        </div>
+                                        <p class="d-none" id="unavailTxt">No matching posts found.</p>
+                                    </div>
+                                    <div class=" flex-shrink-0 ms-2 mt-2">
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
+                    <!-- End Search Modal -->
 
                     <ul class="navbar-nav d-flex flex-row me-2">
                         <li class="nav-item me-3 me-lg-0">
